--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,9 +62,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  # assets:
   assets:
+    - assets/images/swu_att_bg.png
     - assets/images/swu_bluelogo.png
     - assets/images/swu_horizontalLogo.png
+    - assets/images/swu_att_bg.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
