--- a/.github/workflows/flutter-test.yaml
+++ b/.github/workflows/flutter-test.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ main, release, develop, main_front, back ]
+    branches: [ main, release, develop, main_front, back, 'feature/**' ]
 
 jobs:
   Test:
