--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   go_router: ^6.5.2
+  nfc_manager: ^3.2.0
+  firebase_dynamic_links: ^5.1.0
+  firebase_core: ^2.9.0
+  firebase_analytics: ^10.2.0
 
 dev_dependencies:
   flutter_test:
