--- a/.github/workflows/flutter-test.yaml
+++ b/.github/workflows/flutter-test.yaml
@@ -16,6 +16,12 @@ jobs:
       - name: Flutter action
         uses: subosito/flutter-action@v2.3.0
 
+      - name: Prepare for Firebase
+        env:
+          OPTIONS: ${{ secrets.FIREBASE_OPTIONS }}
+        run: |
+          echo $OPTIONS > lib/firebase_options.dart
+
       - name: Install dependencies
         run: flutter pub get
 
