--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   go_router: ^6.5.2
+  network_image_mock: ^2.1.1
 
 dev_dependencies:
   flutter_test:
