--- a/.github/workflows/issue-commented.yaml
+++ b/.github/workflows/issue-commented.yaml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: alex-page/github-project-automation-plus@v0.8.3
         with:
-          project: 전자출결 개선 프로젝트
+          project: '전자출결 개선 프로젝트'
           column: 진행중
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -21,6 +21,6 @@ jobs:
     steps:
       - uses: alex-page/github-project-automation-plus@v0.8.3
         with:
-          project: 전자출결 개선 프로젝트
+          project: '전자출결 개선 프로젝트'
           column: 준비됨
           repo-token: ${{ secrets.GITHUB_TOKEN }}
