--- a/.github/workflows/flutter-test.yaml
+++ b/.github/workflows/flutter-test.yaml
@@ -16,6 +16,14 @@ jobs:
       - name: Flutter action
         uses: subosito/flutter-action@v2.3.0
 
+      - name: Prepare for Firebase
+        env:
+          OPTIONS: ${{ secrets.FIREBASE_OPTIONS }}
+          GOOGLE_KEY: ${{ secrets.GOOGLE_SERVICES }}
+        run: |
+          echo $OPTIONS | base64 --decode > lib/firebase_options.dart
+          echo $GOOGLE_KEY | base64 --decode > android/app/google-services.json
+
       - name: Install dependencies
         run: flutter pub get
 
