--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   go_router: ^6.5.2
   uuid: ^3.0.7
+  firebase_auth: ^4.2.2
+  firebase_core: ^2.10.0
+  firebase_dynamic_links: ^5.1.1
 
 dev_dependencies:
   flutter_test:
