--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^4.2.2
   firebase_core: ^2.10.0
   firebase_dynamic_links: ^5.1.1
+  shared_preferences: ^2.1.0
 
 dev_dependencies:
   flutter_test:
