--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -23,7 +23,12 @@ linter:
   # producing the lint.
   rules:
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+     prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+     avoid_returning_this: true
+     avoid_dynamic_calls: true
+     test_types_in_equals: true
+     avoid_positional_boolean_parameters: true
+     flutter_style_todos: true
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
