--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_core: ^2.10.0
   firebase_dynamic_links: ^5.1.1
   shared_preferences: ^2.1.0
+  cloud_firestore: ^4.5.3
 
 dev_dependencies:
   flutter_test:
