--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ app.*.map.json
 /lib/firebase_options.dart
 /android/app/google-services.json
 /ios/Runner/GoogleService-Info.plist
+/android/app/suvid-18-firebase-adminsdk-ujqfc-091190ece5.json
