--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_dynamic_links: ^5.1.0
   firebase_core: ^2.9.0
   firebase_analytics: ^10.2.0
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
