--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,30 +1,38 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.suvid.check_attendance_student">
    <application
-        android:label="check_attendance_student"
-        android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:launchMode="singleTop"
-            android:theme="@style/LaunchTheme"
-            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
-            android:hardwareAccelerated="true"
-            android:windowSoftInputMode="adjustResize">
-            <!-- Specifies an Android theme to apply to this Activity as soon as
-                 the Android process has started. This theme is visible to the user
-                 while the Flutter UI initializes. After that, this theme continues
-                 to determine the Window background behind the Flutter UI. -->
-            <meta-data
-              android:name="io.flutter.embedding.android.NormalTheme"
-              android:resource="@style/NormalTheme"
-              />
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
+           android:label="전출 시스템"
+           android:name="${applicationName}"
+           android:icon="@mipmap/ic_launcher">
+       <activity
+               android:name=".MainActivity"
+               android:exported="true"
+               android:launchMode="singleTop"
+               android:theme="@style/LaunchTheme"
+               android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
+               android:hardwareAccelerated="true"
+               android:windowSoftInputMode="adjustResize">
+           <!-- Specifies an Android theme to apply to this Activity as soon as
+                the Android process has started. This theme is visible to the user
+                while the Flutter UI initializes. After that, this theme continues
+                to determine the Window background behind the Flutter UI. -->
+           <meta-data
+                   android:name="io.flutter.embedding.android.NormalTheme"
+                   android:resource="@style/NormalTheme"
+           />
+           <intent-filter>
+               <action android:name="android.intent.action.MAIN"/>
+               <category android:name="android.intent.category.LAUNCHER"/>
+
+           </intent-filter>
+           <intent-filter>
+               <action android:name="android.intent.action.VIEW"/>
+               <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+               <category android:name="android.intent.category.DEFAULT"/>
+               <category android:name="android.intent.category.BROWSABLE"/>
+               <data android:host="suvid.page.link" android:scheme="https"/>
+           </intent-filter>
+       </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
