--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   go_router: ^6.5.2
+  uuid: ^3.0.7
+  firebase_auth: ^4.2.2
+  firebase_core: ^2.10.0
+  firebase_dynamic_links: ^5.1.1
+  shared_preferences: ^2.1.0
+  cloud_firestore: ^4.5.3
+  nfc_manager: ^3.2.0
+  firebase_analytics: ^10.2.0
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +57,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  network_image_mock: ^2.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
