--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   cloud_firestore: ^4.5.3
   nfc_manager: ^3.2.0
   firebase_analytics: ^10.2.0
+  cloud_functions: ^4.2.0
 
 dev_dependencies:
   flutter_test:
