--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_analytics: ^10.2.0
   cloud_functions: ^4.2.0
   firebase_messaging: ^14.7.1
+  google_api_availability: ^5.0.0
 
 dev_dependencies:
   flutter_test:
