--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   nfc_manager: ^3.2.0
   firebase_analytics: ^10.2.0
   cloud_functions: ^4.2.0
+  firebase_messaging: ^14.7.1
+  google_api_availability: ^5.0.0
 
 dev_dependencies:
   flutter_test:
