foreground 알림 수신 시 알림 객체를 만들어 화면에 표시
Signed-off-by: solvin <planybirth@github.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   cloud_functions: ^4.2.0
   firebase_messaging: ^14.7.1
   google_api_availability: ^5.0.0
+  notification_channel_manager: ^0.1.1+1
+  flutter_local_notifications: ^16.1.0
 
 dev_dependencies:
   flutter_test:
