자동화 파일 수정

--- a/.github/workflows/flutter-deploy.yaml
+++ b/.github/workflows/flutter-deploy.yaml
@@ -8,7 +8,6 @@ on:
 jobs:
   Test:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
 
@@ -29,7 +28,10 @@ jobs:
       - name: Test flutter app
         run: flutter test
 
+
   BuildAPK:
+    name: Build Android package
+    if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     needs: [ Test ]
 
@@ -68,6 +70,8 @@ jobs:
           if-no-files-found: error
 
   Deploy:
+    name: Deploy to Github
+    if: github.ref_name == 'main'
     runs-on: ubuntu-latest
     needs: [ BuildAPK ]
     steps:
